--- a/src/MPC_OpenMP/src/Makefile.in
+++ b/src/MPC_OpenMP/src/Makefile.in
@@ -167,9 +167,8 @@ am__objects_1 = tools/src/mpcompt_entryPoints.lo \
 	tools/callback/mpcompt_workShare.lo
 am_libmpcomp_la_OBJECTS = mpcomp_api.lo mpcomp_core.lo \
 	mpcomp_fortran.lo mpcomp_loop.lo mpcomp_parallel_region.lo \
-	mpcomp_places_env.lo mpcomp_spinning_core.lo mpcomp_stack.lo \
-	mpcomp_stack_node_leaf.lo mpcomp_sync.lo mpcomp_task.lo \
-	mpcomp_tree.lo mpcomp_alloc.lo omp_gomp.lo \
+	mpcomp_places_env.lo mpcomp_spinning_core.lo mpcomp_sync.lo \
+	mpcomp_task.lo mpcomp_tree.lo mpcomp_alloc.lo omp_gomp.lo \
 	omp_intel_atomics.lo omp_intel.lo mpcomp_task_trace.lo \
 	mpcomp_callback.lo $(am__objects_1)
 libmpcomp_la_OBJECTS = $(am_libmpcomp_la_OBJECTS)
@@ -562,10 +561,9 @@ tools_inc = -I$(abs_top_srcdir)/src/MPC_OpenMP/src/tools/src/ \
 lib_LTLIBRARIES = libmpcomp.la libiomp5.la libgomp.la
 libmpcomp_la_SOURCES = mpcomp_api.c mpcomp_core.c mpcomp_fortran.c \
 	mpcomp_loop.c mpcomp_parallel_region.c mpcomp_places_env.c \
-	mpcomp_spinning_core.c mpcomp_stack.c mpcomp_stack_node_leaf.c \
-	mpcomp_sync.c mpcomp_task.c mpcomp_tree.c mpcomp_alloc.c \
-	omp_gomp.c omp_intel_atomics.c omp_intel.c mpcomp_task_trace.c \
-	mpcomp_callback.c $(tools_src)
+	mpcomp_spinning_core.c mpcomp_sync.c mpcomp_task.c \
+	mpcomp_tree.c mpcomp_alloc.c omp_gomp.c omp_intel_atomics.c \
+	omp_intel.c mpcomp_task_trace.c mpcomp_callback.c $(tools_src)
 tools_src = tools/src/mpcompt_entryPoints.c tools/src/mpcompt_init.c tools/src/mpcompt_instance.c \
             tools/callback/mpcompt_cancel.c tools/callback/mpcompt_control_tool.c \
             tools/callback/mpcompt_device.c tools/callback/mpcompt_dispatch.c \
@@ -728,8 +726,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mpcomp_parallel_region.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mpcomp_places_env.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mpcomp_spinning_core.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mpcomp_stack.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mpcomp_stack_node_leaf.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mpcomp_sync.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mpcomp_task.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mpcomp_task_trace.Plo@am__quote@
