--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,6 @@
 stages:
   - Initialization
   - Configurations
-  - Builds
   - Basic Testing
   - Regular Testing
   - Benchmarks
@@ -159,14 +158,9 @@ MPC Compilation Workshare:
   - cd $HOME/GL_$CI_PIPELINE_ID/build_workshare
   - ${CI_PROJECT_DIR}/installmpc -vv --disable-spack --prefix=$HOME/GL_$CI_PIPELINE_ID/install_workshare --mpc-option='--with-pmi1 --enable-debug' --enable-workshare
 
-############################
-####### BUILD STAGE ########
-############################
-
-# MPC should be built (almost) before anything else
-MPC Compilation:
+MPC Default Configuration:
   <<: *run_by_main
-  stage: Builds
+  stage: Configurations
   script:
   - cd $HOME/GL_$CI_PIPELINE_ID/build
   - ${CI_PROJECT_DIR}/installmpc -vv --disable-spack --prefix=$HOME/GL_$CI_PIPELINE_ID/install --with-slurm --mpc-option='--enable-debug'
