(wip) task dependencies memory management

--- a/src/MPC_OpenMP/src/Makefile.am
+++ b/src/MPC_OpenMP/src/Makefile.am
@@ -43,7 +43,7 @@ libmpcomp_la_SOURCES = mpcomp_api.c mpcomp_core.c mpcomp_fortran.c mpcomp_loop.c
 libmpcomp_la_SOURCES += mpcomp_parallel_region.c mpcomp_places_env.c mpcomp_spinning_core.c
 libmpcomp_la_SOURCES += mpcomp_sync.c mpcomp_task.c
 libmpcomp_la_SOURCES += mpcomp_tree.c mpcomp_alloc.c omp_gomp.c omp_intel_atomics.c omp_intel.c
-libmpcomp_la_SOURCES += mpcomp_task_trace.c mpcomp_callback.c mpcomp_task_deps_redundancy_checker.c
+libmpcomp_la_SOURCES += mpcomp_task_trace.c mpcomp_callback.c
 
 tools_src = tools/src/mpcompt_entryPoints.c tools/src/mpcompt_init.c tools/src/mpcompt_instance.c \
             tools/callback/mpcompt_cancel.c tools/callback/mpcompt_control_tool.c \
